# yolo-workbench

./: .gitignore  CLAUDE.md  PLAN-2.md  PLAN.md  PLAN2.md  README.md  pyproject.toml
src/yolo_workbench/: __init__.py  cli.py  dataset.py  embeddings.py  media_cache.py  models.py  predictor.py  web.py
src/yolo_workbench/static/: api.js  app.js  canvas.js  embeddings.js  grid.js  index.html  predictor.js  state.js  styles.css
tests/: test_api.py  test_bulk.py  test_dataset.py  test_embeddings.py  test_performance.py  test_predictor.py
