[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yolo-workbench"
version = "0.1.0"
description = "Local YOLO dataset annotation, exploration, and repair tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "pillow>=10",
  "pydantic>=2.7",
  "pyyaml>=6",
  "typer>=0.12",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
test = ["httpx>=0.27", "pytest>=8"]
embeddings = ["fiftyone>=0.25", "umap-learn>=0.5", "protobuf>=4", "torch>=2", "torchvision>=0.17"]

[project.scripts]
yolo-workbench = "yolo_workbench.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/yolo_workbench"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
